# dawikk-stock

./: LICENSE  README.md  dawikk-stockfish.podspec  package-lock.json  package.json  react-native-stockfish-android.podspec  tsconfig.json
android/: .project  CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: android_stockfish_bridge.cpp  stockfish_jni.cpp
android/src/main/java/com/dawikk/stockfish/: NNUEHelper.java  RNStockfishModule.java  RNStockfishPackage.java
android/src/main/java/com/reactnativestockfishchessengine/: StockfishChessEngineModule.java
cpp/bridge/: nnue_loader.h  stockfish.cpp  stockfish_bridge.cpp  stockfish_bridge.h
ios/: RNStockfishModule.h  RNStockfishModule.m
lib/commonjs/: index.js  index.js.map
lib/module/: index.js  index.js.map
lib/typescript/: index.d.ts  index.d.ts.map
src/: index.tsx
